2002-12-29  Nick Roberts  <nick@nick.uklinux.net>

	* gdb-ui.el (gdb-delete-display): Rename (gdb-delete-expression).
	(gdb-goto-bp-this-line): Rename (gdb-goto-breakpoint).
	(gdb-toggle-bp-this-line): Rename (gdb-toggle-breakpoint).
	(gdb-delete-bp-this-line): Rename (gdb-delete-breakpoint).
	(gdb-toggle-disp-this-line): Rename (gdb-toggle-display).
	(gdb-delete-disp-this-line): Rename (gdb-delete-display).
	(gud-gdba-marker-filter): Remove unnecessary save-match-data.
	(gdb-mouse-goto-breakpoint, gdb-frames-select): New functions.
	(gdb-frames-mouse-select): Simplify.
	Make keybindings (gdb-goto-breakpoint, gdb-frames-select, etc)
	consistent with other modes in emacs.
	(gdb-display-source-buffer): Return window of source buffer
	for (gud-display-line).

2002-12-29  Markus Rost  <rost@math.ohio-state.edu>

	* button.el (defface button): Add group.

	* cus-edit.el (customize-browse): Call `widget-setup'.

2002-12-29  Andreas Schwab  <schwab@suse.de>

	* Makefile.in: Generate cus-load.el and finder-inf.el in the
	source directory.  Change dependencies on lisp files to explicitly
	use $(lisp).
	(compile-calc): Fix command substitution.
	* cus-dep.el (generated-custom-dependencies-file): New variable.
	(custom-make-dependencies): Use it instead of hardcoding
	cus-load.el.
	* finder.el (generated-finder-keywords-file): New variable.
	(finder-compile-keywords): Use it instead of hardcoding
	finder-inf.el.

2002-12-28  Richard M. Stallman  <rms@gnu.org>

	* info-look.el (info-lookup): Fix error message typo.

	* comint.el (comint-mode): Localy set scroll-conservatively.
	(comint-postoutput-scroll-to-bottom): comint-scroll-show-maximum-output
	is active only when point is at end.

	* dired.el (dired-goto-file): Handle \ and ^M quoted by backslash.
	Fix error message.

	* files.el (find-file-noselect-1): Kill local value of `cursor-type'.

	* simple.el (repeat-complex-command): Signal real error on failure.

2002-12-28  Andreas Schwab  <schwab@suse.de>
