@@ -88,7 +88,9 @@ This is nil while loading `scroll-bar.el', and t afterward.")
 	(setq frames (cdr frames))))))
 
 (defcustom scroll-bar-mode
-  (if (eq system-type 'windows-nt) 'right 'left)
+  (cond ((eq system-type 'windows-nt) 'right)
+	((eq window-system 'mac) 'right)
+	(t 'left))
   "*Specify whether to have vertical scroll bars, and on which side.
 Possible values are nil (no scroll bars), `left' (scroll bars on left)
 and `right' (scroll bars on right).
@@ -120,7 +122,9 @@ turn off scroll bars; otherwise, turn on scroll bars."
   ;; Tweedle the variable according to the argument.
   (set-scroll-bar-mode (if (null flag) (not scroll-bar-mode)
 			 (and (or (not (numberp flag)) (>= flag 0))
-			      (if (eq system-type 'windows-nt) 'right 'left)))))
+			      (cond ((eq system-type 'windows-nt) 'right)
+				    ((eq window-system 'mac) 'right)
+				    (t 'left))))))
 
 (defun toggle-scroll-bar (arg)
   "Toggle whether or not the selected frame has vertical scroll bars.
@@ -139,7 +143,9 @@ when they are turned on; if it is nil, they go on the left."
    (list (cons 'vertical-scroll-bars
 	       (if (> arg 0)
 		   (or scroll-bar-mode
-		       (if (eq system-type 'windows-nt) 'right 'left)))))))
+		       (cond ((eq system-type 'windows-nt) 'right)
+			     ((eq window-system 'mac) 'right)
+			     (t 'left))))))))
 
 (defun toggle-horizontal-scroll-bar (arg)
   "Toggle whether or not the selected frame has horizontal scroll bars.
